[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnilens"
version = "1.0.0"
description = "Professional-Grade Code Analysis Tool for Git Repositories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Throthgare", email = "throthgare@example.com"},
]
maintainers = [
    {name = "Throthgare", email = "throthgare@example.com"},
]
keywords = ["git", "analysis", "code", "repository", "forensics", "complexity", "tech-debt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/Throthgare/omni-lens"
Repository = "https://github.com/Throthgare/omni-lens.git"
Issues = "https://github.com/Throthgare/omni-lens/issues"
Changelog = "https://github.com/Throthgare/omni-lens/blob/master/CHANGELOG.md"

[project.scripts]
omnilens = "omnilens.__main__:run_analysis"

[tool.setuptools]
packages = ["omnilens"]
include-package-data = true

[tool.setuptools.package-data]
omnilens = ["*.md", "*.txt"]